@@ -203,6 +203,7 @@ Chronological list of authors
   - Patricio Barletta
   - Mikhail Glagolev
 2023
+  - Shaivi Malik
   - Christian Pfaendner
   - Pratham Chauhan
   - Meet Brijwani
